docs: updated phrasing

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.ipynb
@@ -14,13 +14,11 @@
     "tags": []
    },
    "source": [
-    "# Creating a `FeedbackDataset`\n",
+    "# Configuring `Users` and `Workspaces`\n",
     "\n",
-    "This tutorial is the first of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](.co). In this step we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it.\n",
+    "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. In this step, we will show how to configure `Users` and `Workspaces`. If you need additional context, consult [user management](../../../../getting_started/installation/configurations/user_management.md) and [workspace management](../../../../getting_started/installation/configurations/workspace_management.md).\n",
     "\n",
-    "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.png)\n",
-    "\n",
-    "We will start by creating a basic dataset using the [ag_news](https://huggingface.co/datasets/ag_news) dataset as an example and push it to `Argilla` and the Hugging Face `hub`."
+    "![workflow](../../../../_static/tutorials/end2end/base/workflow_users_and_workspaces.png)"
    ]
   },
   {
@@ -251,7 +249,7 @@
     "tags": []
    },
    "source": [
-    "## Create a `FeedbackDataset` <a class=\"anchor\" id=\"create-feedbackdataset\"></a>"
+    "## Configure a `FeedbackDataset` <a class=\"anchor\" id=\"create-feedbackdataset\"></a>"
    ]
   },
   {
@@ -889,12 +887,11 @@
     "tags": []
    },
    "source": [
-    "In this tutorial we created an `Argilla` `FeedbackDataset` for text classification, starting from [ag_news](https://huggingface.co/datasets/ag_news).\n",
+    "In this tutorial, we created some Argilla `Users` and `Workspaces`, and created some annotation team configurations.\n",
     "\n",
-    "We created a `FeedbackDataset` for text classification with a `LabelQuestion`, from data stored as a `datasets.Dataset` and a `pandas.DataFrame`.\n",
-    "This dataset was pushed both to `Argilla` where we can curate and label the records, and finally pushed it to the 🤗`hub`.\n",
+    "If you need additional context, consult [user management](../../../../getting_started/installation/configurations/user_management.md) and [workspace management](../../../../getting_started/installation/configurations/workspace_management.md).\n",
     "\n",
-    "To learn more about how to work with the `FeedbackDataset` check the [cheatsheet](https://docs.argilla.io/en/latest/getting_started/cheatsheet.html#cheatsheet)."
+    "Alternatively, you can go to the next step and [create a FeedbackDataset](/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.html)."
    ]
   }
  ],
