--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Creating a `FeedbackDataset`\n",
     "\n",
-    "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](/configure-users-and-workspaces.html). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our docs on creating a dataset](../../../../practical_guides/create_dataset.md).\n",
+    "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.html). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our practical guide on creating a dataset](../../../../practical_guides/create_dataset.md).\n",
     "\n",
     "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.png)\n",
     "\n",
@@ -40,10 +40,10 @@
     "## Table of Contents\n",
     "\n",
     "1. [Configure a FeedbackDataset](#create-feedbackdataset)\n",
-    "2. [Add records](#add-records)\n",
+    "2. [Add FeedbackRecords](#add-records)\n",
     "   1. [From a Hugging Face dataset](#create-feedbackdataset-datasets)\n",
     "   2. [From a pandas.DataFrame](#create-feedbackdataset-pandas)\n",
-    "3. [Save a FeedbackDataset](#save-the-dataset)\n",
+    "3. [Save and load a FeedbackDataset](#save-the-dataset)\n",
     "   1. [Push our FeedbackDataset to Argilla](#push-to-argilla)\n",
     "   2. [Push our FeedbackDataset to the Hugging Face hub](#push-to-hf-hub)\n",
     "4. [Conclusions](#conclusions)"
@@ -415,7 +415,7 @@
     "tags": []
    },
    "source": [
-    "## Add records <a class=\"anchor\" id=\"add-records\"></a>\n",
+    "## Add `FeedbackRecords` <a class=\"anchor\" id=\"add-records\"></a>\n",
     "\n",
     "### From a Hugging Face `dataset` <a class=\"anchor\" id=\"create-feedbackdataset-datasets\"></a>"
    ]
@@ -635,7 +635,7 @@
     "tags": []
    },
    "source": [
-    "## Save and load the dataset <a class=\"anchor\" id=\"save-dataset\"></a>\n",
+    "## Save and load a `FeedbackDataset` <a class=\"anchor\" id=\"save-dataset\"></a>\n",
     "\n",
     "### From `Argilla` <a class=\"anchor\" id=\"push-to-argilla\"></a>"
    ]
