--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -114,8 +114,8 @@
    "outputs": [],
    "source": [
     "# Argilla credentials\n",
-    "api_url = \"http://localhost:6900\" # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
-    "api_key = DEFAULT_API_KEY # admin.apikey\n",
+    "api_url = \"http://localhost:6900\"  # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
+    "api_key = DEFAULT_API_KEY  # admin.apikey\n",
     "# Huggingface credentials\n",
     "hf_token = \"hf_...\""
    ]
@@ -133,10 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rg.init(\n",
-    "    api_url=api_url,\n",
-    "    api_key=api_key\n",
-    ")"
+    "rg.init(api_url=api_url, api_key=api_key)"
    ]
   },
   {
@@ -252,9 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "terms_metadata_property = rg.TermsMetadataProperty(name=\"group\",\n",
-    "                                                   title=\"Annotation Group\",\n",
-    "                                                   values=[\"group-1\", \"group-2\", \"group-3\"])"
+    "terms_metadata_property = rg.TermsMetadataProperty(\n",
+    "    name=\"group\", title=\"Annotation Group\", values=[\"group-1\", \"group-2\", \"group-3\"]\n",
+    ")"
    ]
   },
   {
@@ -277,9 +274,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us add the metadata to individual records as well. For demonstration purposes here, we can create a list of groups in randomly select one to assign to each record. As we normally do, we should be careful to divide records into groups in equal numbers.\n",
+    "Let us add the metadata to individual records as well. For demonstration purposes here, we can create a list of groups and randomly select one to assign to each record. As we normally do, we should be careful to divide records into groups in equal numbers.\n",
     "\n",
-    "We firstly learn how many records we have in the dataset and how many groups we have defined in our `TermsMetadataProperty`. Then, we create a list of group names at the number of records. "
+    "We firstly learn how many records we have in the dataset and how many groups we have defined in our `TermsMetadataProperty`. Then, we compile a list of group names, whose length is equivalent to the number of records."
    ]
   },
   {
@@ -291,7 +288,13 @@
     "length_dataset = len(dataset)\n",
     "num_groups = len(terms_metadata_property.values)\n",
     "\n",
-    "groups = [f\"group-{i}\" for i in range(1, num_groups + 1) for _ in range(length_dataset // num_groups + (1 if i <= length_dataset % num_groups else 0))]"
+    "groups = [\n",
+    "    f\"group-{i}\"\n",
+    "    for i in range(1, num_groups + 1)\n",
+    "    for _ in range(\n",
+    "        length_dataset // num_groups + (1 if i <= length_dataset % num_groups else 0)\n",
+    "    )\n",
+    "]"
    ]
   },
   {
@@ -337,13 +340,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now see that the metadata property is added to the dataset and we can filter our records accordingly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### IntegerMetadataProperty\n",
     "The second type of metadata property that Argilla offers is the `IntegerMetadataProperty`, which can be used to filter the metadata of a record based on a range of integer values. While the `name` and `title` are the same as the `TermsMetadataProperty`, we do not have a `values` parameter. Instead, we have `min` and `max` parameters that define the range of the integer values. Let us create an `IntegerMetadataProperty` and add it to our dataset.\n",
     "\n",
@@ -374,10 +370,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "integer_metadata_property = rg.IntegerMetadataProperty(name=\"length\",\n",
-    "                                                       title=\"Length of the text\",\n",
-    "                                                       min=min_length_string,\n",
-    "                                                       max=max_length_string)\n",
+    "integer_metadata_property = rg.IntegerMetadataProperty(\n",
+    "    name=\"length\",\n",
+    "    title=\"Length of the text\",\n",
+    "    min=min_length_string,\n",
+    "    max=max_length_string,\n",
+    ")\n",
     "\n",
     "dataset.add_metadata_property(integer_metadata_property)"
    ]
@@ -450,10 +448,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "float_metadata_property = rg.FloatMetadataProperty(name=\"length_std\",\n",
-    "                                                   title=\"Standard deviation of the length of the text\",\n",
-    "                                                   min=mean-std,\n",
-    "                                                   max=mean+std)\n",
+    "float_metadata_property = rg.FloatMetadataProperty(\n",
+    "    name=\"length_std\",\n",
+    "    title=\"Standard deviation of the length of the text\",\n",
+    "    min=mean - std,\n",
+    "    max=mean + std,\n",
+    ")\n",
     "\n",
     "dataset.add_metadata_property(float_metadata_property)"
    ]
@@ -474,7 +474,7 @@
     "# For local dataset\n",
     "for record in dataset.records:\n",
     "    record_len = float(len(record.fields[\"text\"]))\n",
-    "    if record_len <= mean+std and record_len >= mean-std:\n",
+    "    if record_len <= mean + std and record_len >= mean - std:\n",
     "        record.metadata[\"length_std\"] = record_len"
    ]
   },
@@ -489,7 +489,7 @@
     "\n",
     "for record in modified_records:\n",
     "    record_len = float(len(record.fields[\"text\"]))\n",
-    "    if record_len <= mean+std and record_len >= mean-std:\n",
+    "    if record_len <= mean + std and record_len >= mean - std:\n",
     "        record.metadata[\"length_std\"] = record_len\n",
     "\n",
     "dataset.update_records(modified_records)"
