adding warnings markdown

--- a/docs/_source/tutorials/notebooks/making-most-of-markdown.ipynb
+++ b/docs/_source/tutorials/notebooks/making-most-of-markdown.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Making the Most of Markdown within Argilla TextFields\n",
+    "# 📑 Making the Most of Markdown within Argilla TextFields\n",
     "\n",
     "As you may have noticed, Argilla supports Markdown within its text fields. This means you can easily add formatting like **bold** and *italic* text, [links](https://www.google.com), and even insert HTML elements like images, audios, videos, and iframes. It's a powerful tool to have at your disposal. Let's dive in!\n",
     "\n",
@@ -13,7 +13,9 @@
     "* Exploiting the power of `displaCy` for NER and relationship extraction.\n",
     "* Exploring multi-modality: videos, audio, and image.\n",
     "\n",
-    "Let's get started!"
+    "Let's get started!\n",
+    "\n",
+    "> **Friendly Reminder:** Multimedia in Markdown is here, but it's still in the experimental phase. As we navigate the early stages, there are limits on file sizes due to ElasticSearch constraints, and the visualization and loading times may vary depending on your browser. We're on the case to improve this and welcome your feedback and suggestions! 🌟🚀"
    ]
   },
   {
