--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add Metadata Properties to `FeedbackDataset` for `text-classification`"
+    "# Add Metadata Properties to `FeedbackDataset`"
    ]
   },
   {
