docs: slight updates phrasing

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -24,11 +24,9 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "1. [Pull the dataset](#Pull-the-Dataset)\n",
-    "\n",
-    "    A. [From Argilla](#From-Argilla)\n",
-    "    \n",
-    "    B. [From HuggingFace Hub](#From-HuggingFace-Hub)\n",
+    "1. [Load a FeedbackDataset](#Pull-the-Dataset)\n",
+    "   1. [From Argilla](#From-Argilla) \n",
+    "   2. [From the HuggingFace Hub](#From-HuggingFace-Hub)\n",
     "2. [Add metadata properties](#Add-Metadata-Properties)\n",
     "\n",
     "    A. [TermsMetadataProperty](#TermsMetadataProperty)\n",
