feat: update parameter cells and some comments in notebooks

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces-000.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "markdown",
    "id": "fc0c600b",
    "metadata": {
+    "editable": true,
     "papermill": {
      "duration": 0.046655,
      "end_time": "2023-11-15T10:59:17.308341",
      "exception": false,
      "start_time": "2023-11-15T10:59:17.261686",
      "status": "completed"
+    },
+    "slideshow": {
+     "slide_type": ""
     },
     "tags": []
    },
@@ -108,12 +112,16 @@
    "execution_count": 38,
    "id": "bbbd3c38-1e3c-4d7f-97e6-22dd3b668fc8",
    "metadata": {
+    "editable": true,
     "papermill": {
      "duration": 3.857186,
      "end_time": "2023-11-15T10:59:21.228277",
      "exception": false,
      "start_time": "2023-11-15T10:59:17.371091",
      "status": "completed"
+    },
+    "slideshow": {
+     "slide_type": ""
     },
     "tags": []
    },
@@ -295,12 +303,16 @@
    "execution_count": 54,
    "id": "ca4fd7ae-7e31-405e-84c1-974828a903bd",
    "metadata": {
+    "editable": true,
     "papermill": {
      "duration": null,
      "end_time": null,
      "exception": null,
      "start_time": null,
      "status": "completed"
+    },
+    "slideshow": {
+     "slide_type": ""
     },
     "tags": [
      "parameters"
@@ -358,6 +370,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0279dbe1",
    "metadata": {},
    "source": [
     "Alternatively, we can use the `CLI` to run the `argilla login` command and pass the `api_url` and `api_key` there."
@@ -366,6 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "8d9f3570",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +463,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "id": "fa3ffa5f",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -472,12 +493,16 @@
    "execution_count": 13,
    "id": "8b01b473-a815-427c-986e-6c2bedf1b5d7",
    "metadata": {
+    "editable": true,
     "papermill": {
      "duration": null,
      "end_time": null,
      "exception": null,
      "start_time": null,
      "status": "completed"
+    },
+    "slideshow": {
+     "slide_type": ""
     },
     "tags": []
    },
@@ -527,7 +552,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "46387e9a",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "user = rg.User.create(\n",
@@ -541,7 +573,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "acdbee81",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!python -m argilla users create --username owner --role owner --password {api_key}"
@@ -549,6 +588,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "46e05aa8",
    "metadata": {},
    "source": [
     "### Update `User`\n",
@@ -559,6 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
+   "id": "879b3c4d",
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +616,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "34348bdd",
    "metadata": {},
    "source": [
     "Now, let's quickly change this back to avoid having wrong access in our organization."
@@ -583,6 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
+   "id": "2490bb88",
    "metadata": {},
    "outputs": [
     {
@@ -620,6 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
+   "id": "c89f7d26",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.13"
   },
   "papermill": {
    "default_parameters": {},
