create the tutorial, fixed type

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -28,17 +28,12 @@
     "   1. [From Argilla](#From-Argilla) \n",
     "   2. [From the HuggingFace Hub](#From-HuggingFace-Hub)\n",
     "2. [Add metadata properties](#Add-Metadata-Properties)\n",
-    "\n",
-    "    A. [TermsMetadataProperty](#TermsMetadataProperty)\n",
-    "    \n",
-    "    B. [IntegerMetadataProperty](#IntegerMetadataProperty)\n",
-    "    \n",
-    "    C. [FloatMetadataProperty](#FloatMetadataProperty)\n",
+    "    1. [TermsMetadataProperty](#TermsMetadataProperty)\n",
+    "    2. [IntegerMetadataProperty](#IntegerMetadataProperty)\n",
+    "    3. [FloatMetadataProperty](#FloatMetadataProperty)\n",
     "3. [Push the dataset](#Push-the-Dataset)\n",
-    "\n",
-    "    A. [To Argilla](#To-Argilla)\n",
-    "    \n",
-    "    B. [To HuggingFace Hub](#To-HuggingFace-Hub)\n",
+    "    1. [To Argilla](#To-Argilla)\n",
+    "    2. [To HuggingFace Hub](#To-HuggingFace-Hub)\n",
     "4. [Conclusion](#Conclusion)"
    ]
   },
@@ -546,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remote_dataset = dataset.push_to_argilla(\"end2end_textclassification\")"
+    "remote_dataset = dataset.push_to_argilla(\"end2end_textclassification_with_metadata\")"
    ]
   },
   {
@@ -600,7 +595,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.push_to_huggingface(name=\"end2end_textclassification\", generate_card=True)"
+    "dataset.push_to_huggingface(name=\"end2end_textclassification_with_metadata\", generate_card=True)"
    ]
   },
   {
