changed referring parts

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -951,70 +951,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.007871150970458984,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 47,
-       "postfix": null,
-       "prefix": "Pushing dataset shards to the dataset hub",
-       "rate": null,
-       "total": 1,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "370f7f658f444aab85f81242f6eacd4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Pushing dataset shards to the dataset hub:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.007939815521240234,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 47,
-       "postfix": null,
-       "prefix": "Downloading metadata",
-       "rate": null,
-       "total": 9040,
-       "unit": "B",
-       "unit_divisor": 1000,
-       "unit_scale": true
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b68767e5e34945b19016d2aa8586b0ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading metadata:   0%|          | 0.00/9.04k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset.push_to_huggingface(name=\"end2end_textclassification_with_metadata\", generate_card=True)"
    ]
@@ -1025,7 +962,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "In this tutorial, we have seen how to use metadata properties to enhance our dataset. We have first seen how we can pull the dataset from either Argilla or HuggingFace Hub. Then, we have seen how to add `TermsMetadataProperty`, `IntegerMetadataProperty` and `FloatMetadataProperty` to our dataset. We have also seen how `RemoteFeedbackDataset` works and how to push the dataset to HuggingFace Hub. If you want to add some suggestions and responses to your dataset, you can checkout the [next tutorial](./add-suggestions-and-responses-005.ipynb). For more detailed info on how to utilize various tools, please refer to our [practical guides](../../../../practical_guides/practical_guides.md)."
+    "In this tutorial, we have seen how to use metadata properties to enhance our dataset. We have first seen how we can pull the dataset from either Argilla or HuggingFace Hub. Then, we have seen how to add `TermsMetadataProperty`, `IntegerMetadataProperty` and `FloatMetadataProperty` to our dataset. We have also seen how `RemoteFeedbackDataset` works and how to push the dataset to HuggingFace Hub. To add vector representations of records in order for semantic search, you can checkout the [next tutorial](./add-vectors-004.ipynb). For more detailed info on how to utilize various tools, please refer to our [practical guides](../../../../practical_guides/practical_guides.md)."
    ]
   }
  ],
