--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -40,17 +40,12 @@
     "   1. [From Argilla](#From-Argilla) \n",
     "   2. [From the HuggingFace Hub](#From-HuggingFace-Hub)\n",
     "2. [Add metadata properties](#Add-Metadata-Properties)\n",
-    "\n",
-    "    A. [TermsMetadataProperty](#TermsMetadataProperty)\n",
-    "    \n",
-    "    B. [IntegerMetadataProperty](#IntegerMetadataProperty)\n",
-    "    \n",
-    "    C. [FloatMetadataProperty](#FloatMetadataProperty)\n",
+    "    1. [TermsMetadataProperty](#TermsMetadataProperty)\n",
+    "    2. [IntegerMetadataProperty](#IntegerMetadataProperty)\n",
+    "    3. [FloatMetadataProperty](#FloatMetadataProperty)\n",
     "3. [Push the dataset](#Push-the-Dataset)\n",
-    "\n",
-    "    A. [To Argilla](#To-Argilla)\n",
-    "    \n",
-    "    B. [To HuggingFace Hub](#To-HuggingFace-Hub)\n",
+    "    1. [To Argilla](#To-Argilla)\n",
+    "    2. [To HuggingFace Hub](#To-HuggingFace-Hub)\n",
     "4. [Conclusion](#Conclusion)"
    ]
   },
@@ -875,7 +870,7 @@
     }
    ],
    "source": [
-    "remote_dataset = dataset.push_to_argilla(\"end2end_textclassification_metadata\")"
+    "remote_dataset = dataset.push_to_argilla(\"end2end_textclassification_with_metadata\")"
    ]
   },
   {
@@ -948,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -956,72 +951,9 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.007871150970458984,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 47,
-       "postfix": null,
-       "prefix": "Pushing dataset shards to the dataset hub",
-       "rate": null,
-       "total": 1,
-       "unit": "it",
-       "unit_divisor": 1000,
-       "unit_scale": false
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "370f7f658f444aab85f81242f6eacd4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Pushing dataset shards to the dataset hub:   0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/json": {
-       "ascii": false,
-       "bar_format": null,
-       "colour": null,
-       "elapsed": 0.007939815521240234,
-       "initial": 0,
-       "n": 0,
-       "ncols": null,
-       "nrows": 47,
-       "postfix": null,
-       "prefix": "Downloading metadata",
-       "rate": null,
-       "total": 9040,
-       "unit": "B",
-       "unit_divisor": 1000,
-       "unit_scale": true
-      },
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b68767e5e34945b19016d2aa8586b0ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading metadata:   0%|          | 0.00/9.04k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset.push_to_huggingface(\"argilla/end2end_textclassification\")"
+    "dataset.push_to_huggingface(name=\"end2end_textclassification_with_metadata\", generate_card=True)"
    ]
   },
   {
@@ -1030,7 +962,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "In this tutorial, we have seen how to use metadata properties to enhance our dataset. We have first seen how we can pull the dataset from either Argilla or HuggingFace Hub. Then, we have seen how to add `TermsMetadataProperty`, `IntegerMetadataProperty` and `FloatMetadataProperty` to our dataset. We have also seen how `RemoteFeedbackDataset` works and how to push the dataset to HuggingFace Hub."
+    "In this tutorial, we have seen how to use metadata properties to enhance our dataset. We have first seen how we can pull the dataset from either Argilla or HuggingFace Hub. Then, we have seen how to add `TermsMetadataProperty`, `IntegerMetadataProperty` and `FloatMetadataProperty` to our dataset. We have also seen how `RemoteFeedbackDataset` works and how to push the dataset to HuggingFace Hub. To add vector representations of records in order for semantic search, you can checkout the [next tutorial](./add-vectors-004.ipynb). For more detailed info on how to utilize various tools, please refer to our [practical guides](../../../../practical_guides/practical_guides.md)."
    ]
   }
  ],
