--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
@@ -90,9 +90,7 @@
    "outputs": [],
    "source": [
     "import argilla as rg\n",
-    "from argilla._constants import DEFAULT_API_KEY\n",
-    "import statistics\n",
-    "import random"
+    "from argilla._constants import DEFAULT_API_KEY"
    ]
   },
   {
