docs: updated references

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-suggestions-and-responses-005.ipynb
@@ -480,7 +480,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.push_to_huggingface(name=\"end2end_textclassification_with_suggestions_and_responses\", generate_card=True)"
+    "#papermill_description=push-dataset-to-huggingface\n",
+    "dataset.push_to_huggingface(name=\"argilla/end2end_textclassification_with_suggestions_and_responses\", generate_card=True)"
    ]
   },
   {
