--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-vectors-004.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-vectors-004.ipynb
@@ -574,7 +574,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.push_to_huggingface(name=\"end2end_textclassification_with_vectors\", generate_card=True)"
+    "#papermill_description=push-dataset-to-huggingface\n",
+    "dataset.push_to_huggingface(name=\"argilla/end2end_textclassification_with_vectors\", generate_card=True)"
    ]
   },
   {
