--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-metadata-003.ipynb
@@ -953,6 +953,7 @@
    },
    "outputs": [],
    "source": [
+    "#papermill_description=push-dataset-to-huggingface\n",
     "dataset.push_to_huggingface(name=\"end2end_textclassification_with_metadata\", generate_card=True)"
    ]
   },
