docs: assign records

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
@@ -111,8 +111,8 @@
    "outputs": [],
    "source": [
     "# Argilla credentials\n",
-    "api_url = \"http://localhost:6900\"  # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
-    "api_key = DEFAULT_API_KEY  # admin.apikey\n",
+    "api_url = \"http://localhost:6900\" # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
+    "api_key = DEFAULT_API_KEY # admin.apikey\n",
     "# Huggingface credentials\n",
     "hf_token = \"hf_...\""
    ]
@@ -495,30 +495,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "Note \n",
-    "\n",
-    "A last option if working with no overlap, it would be to use a common workspace , so that the annotators will filter the records using the [metadata](./add-metadata-003.ipynb):\n",
+    "A last option if working with no overlap, would be to use a common workspace, so that the annotators will filter the records using the [metadata](./add-metadata-003.ipynb):\n",
     "\n",
     "```python\n",
     "# Add the metadata to the existing records\n",
     "modified_records = []\n",
     "for group, users in assignments.items():\n",
-    "  assigned_records = next(iter(assignments[group].values()))\n",
-    "  for record in assigned_records:\n",
-    "    record.metadata[\"groups\"] = group\n",
-    "    modified_records.append(record)\n",
-    "># Push the dataset with the modified records\n",
+    "    assigned_records = next(iter(assignments[group].values()))\n",
+    "    for record in assigned_records:\n",
+    "        record.metadata[\"groups\"] = group\n",
+    "        modified_records.append(record)\n",
+    "\n",
+    "# Push the dataset with the modified records\n",
     "dataset = rg.FeedbackDataset.for_text_classification(\n",
-    "        labels=[\"World\", \"Sports\", \"Business\", \"Sci/Tech\"],\n",
-    "        guidelines=\"Classify the articles into one of the four categories.\",\n",
-    "        metadata_properties=[rg.TermsMetadataProperty(name=\"groups\")]\n",
-    "  )\n",
+    "    labels=[\"World\", \"Sports\", \"Business\", \"Sci/Tech\"],\n",
+    "    guidelines=\"Classify the articles into one of the four categories.\",\n",
+    "    metadata_properties=[rg.TermsMetadataProperty(name=\"groups\")]\n",
+    ")\n",
     "dataset.add_records(modified_records)\n",
-    "remote_dataset = dataset.push_to_argilla(name=\"text_classification1\", workspace=\"admin\")\n",
-    "```\n",
-    "</div>"
+    "remote_dataset = dataset.push_to_argilla(name=\"end2end_textclassification_metadata_assignment\", workspace=\"admin\")\n",
+    "```"
    ]
   },
   {
