chore: updated cell id

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
@@ -102,8 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "ca4fd7ae-7e31-405e-84c1-974828a903bd",
    "metadata": {
+    "editable": true,
+    "papermill": {
+     "duration": null,
+     "end_time": null,
+     "exception": null,
+     "start_time": null,
+     "status": "completed"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": [
      "parameters"
     ]
@@ -211,17 +223,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'text': \"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\"}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset[0].fields"
    ]
@@ -296,15 +298,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of records: 1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the records\n",
     "records = [record for record in dataset]\n",
@@ -385,15 +379,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'group_a': ['emily', 'carlos', 'aisha', 'dimitry', 'chloe'], 'group_b': ['liam', 'hina', 'samuel', 'maya', 'luca']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from argilla.client.feedback.utils import assign_workspaces\n",
     "\n",
@@ -443,15 +429,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'emily': ['emily'], 'carlos': ['carlos'], 'aisha': ['aisha'], 'dimitry': ['dimitry'], 'chloe': ['chloe'], 'liam': ['liam'], 'hina': ['hina'], 'samuel': ['samuel'], 'maya': ['maya'], 'luca': ['luca']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from argilla.client.feedback.utils import assign_workspaces\n",
     "\n",
@@ -541,15 +519,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of users: 10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get only those users with the role \"annotator\"\n",
     "users = [user for user in rg.User.list() if user.role == \"annotator\"]\n",
@@ -560,15 +530,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of records: 1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the records\n",
     "records = [record for record in dataset]\n",
@@ -640,15 +602,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'emily': ['emily'], 'carlos': ['carlos'], 'aisha': ['aisha'], 'dimitry': ['dimitry'], 'chloe': ['chloe'], 'liam': ['liam'], 'hina': ['hina'], 'samuel': ['samuel'], 'maya': ['maya'], 'luca': ['luca']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from argilla.client.feedback.utils import assign_workspaces\n",
     "\n",
