chore: updated add vectors

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-vectors-004.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/add-vectors-004.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SentenceTransformer(\"paraphrase-MiniLM-L6-v2\")"
+    "model = SentenceTransformer(\"TaylorAI/bge-micro\")"
    ]
   },
   {
@@ -356,8 +356,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for record in dataset.records:\n",
-    "    record.vectors[\"sentence_embedding\"] = model.encode(record.fields[\"text\"]).tolist()"
+    "texts = [record.fields[\"text\"] for record in dataset.records]\n",
+    "embeddings = model.encode(texts)\n",
+    "\n",
+    "for record, embedding in zip(dataset.records, embeddings):\n",
+    "    record.vectors[\"sentence_embedding\"] = embedding.tolist()"
    ]
   },
   {
@@ -378,9 +381,11 @@
    "outputs": [],
    "source": [
     "modified_records = [record for record in dataset.records]\n",
+    "texts = [record.fields[\"text\"] for record in modified_records]\n",
+    "embeddings = model.encode(texts)\n",
     "\n",
-    "for record in modified_records:\n",
-    "    record.vectors[\"sentence_embedding\"] = model.encode(record.fields[\"text\"]).tolist()"
+    "for record, embedding in zip(modified_records, embeddings):\n",
+    "    record.vectors[\"sentence_embedding\"] = embedding.tolist()"
    ]
   },
   {
